--- a/frontend/src/components/Footer/styles.scss
+++ b/frontend/src/components/Footer/styles.scss
@@ -1,14 +1,27 @@
-.footer{
-    .colum{
-        .nav{
-            .list{
-                .list-item{
+@import '../../config/variables';
 
-                }
-            }
+.footer {
+    max-width: $max-page-width;
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: 12px;
+    .column {
+      .nav {
+        .list {
+          display: flex;
+          .list-item {
+            margin-left: 10px;
+            color: $dark-blue;
+          }
         }
-        .copyright{
-
-        }
+      }
+      .copyright {
+        color: $dark-grey;
+      }
     }
-}
+  }
