--- a/frontend/src/components/App/styles.scss
+++ b/frontend/src/components/App/styles.scss
@@ -7,8 +7,12 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
       Arial, sans-serif;
     font-size: $normal-font-size;
-  }
-  
-  img {
+}
+
+*{
+  box-sizing: border-box;
+}
+
+img {
     max-width: 100%;
-  }
+}
