--- a/frontend/src/components/Footer/styles.module.scss
+++ b/frontend/src/components/Footer/styles.module.scss
@@ -8,6 +8,7 @@
   text-transform: uppercase;
   font-size: $small-font-size;
   margin: 55px auto;
+  margin-top: 220px;
   flex-wrap: wrap;
   @include breakpoint("phone-tablet") {
     justify-content: center;
